--- a/todomvc/index.html
+++ b/todomvc/index.html
@@ -59,7 +59,10 @@
 		<script>
 			traceur.options.experimental = true;
 		</script>
+		<!--
 		<script src="js/es6-module-loader.js"></script>
 		<script type="text/traceur" src="js/todoApp.js"></script>
+	-->
+		<script type="text/traceur" src="js/app.js"></script>
 	</body>
 </html>
